# jwt-term

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  main.rs
src/commands/: decode.rs  mod.rs  verify.rs
src/core/: decoder.rs  jwks.rs  mod.rs  time_travel.rs  validator.rs
src/display/: json_printer.rs  mod.rs  token_status.rs
tests/: cli_test.rs
tests/common/: mod.rs
tests/fixtures/: ec_private.pem  ec_public.pem  ed25519_public.pem  rsa_private.pem  rsa_public.pem
