[package]
name = "jwt-term"
version = "0.1.0"
edition = "2024"
authors = ["Felipe Pires Morandini"]
description = "A blazing-fast, secure, and offline-first CLI for inspecting, validating, and manipulating JWTs"
license = "MIT"
repository = "https://github.com/felipemorandini/jwt-term"
keywords = ["jwt", "oauth", "cli", "security", "token"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
